[package]
name = "fdt"
version = "0.2.0-alpha1"
authors = ["Wesley Norris <repnop@outlook.com>"]
edition = "2018"

repository = "https://github.com/repnop/fdt"

license = "MPL-2.0"

description = "A pure-Rust `#![no_std]` crate for parsing Flattened Devicetrees"
keywords = ["devicetree", "fdt", "dt"]
categories = ["embedded", "no-std"]
readme = "README.md"

[features]
pretty-printing = []

[dependencies]
